# hello-tonic

./: Cargo.toml  build.rs
.github/workflows/: rust.yml
connect-example/: buf.gen.yaml  package.json  pnpm-lock.yaml
connect-example/src/: App.css  App.tsx  main.tsx
connect-example/src/api/: gprc-client.ts
connect-example/src/components/: client-streaming.tsx  oneof-hello.tsx  say-hello.test.tsx  say-hello.tsx  streaming-hello.tsx
connect-example/src/mock/: handlers.ts  index.ts
connect-example/test/: setup.ts
proto/: hello.proto
src/: client.rs  client_web.rs  main.rs
